# RISC-V

./: CMakeLists.txt  EX.hpp  ID.hpp  IF.hpp  Intermediate_register.hpp  MEM.hpp  WB.hpp  documentreading.hpp  forwarding.hpp  hardware.hpp  main.cpp  operation.hpp  prediction.hpp  run.hpp  typedef.hpp
